// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactTile - Should render 1`] = `
<div
  className="row member-not-confirmed"
  id="contact-tile"
  onClick={[Function]}
>
  <div
    className="col-md-3 col-sm-12"
  >
    <div
      className="text-center avatar-container"
    >
      <img
        alt="avatar"
        className="avatar img-circle img-thumbnail"
        src="images/default-avatar.png"
      />
    </div>
  </div>
  <div
    className="col-md-9 col-sm-12"
  >
    <div
      className="row"
    >
      <h4
        className="bp3-heading"
      >
        Testy McTesterson
      </h4>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Email: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      >
        testy.mctesterson@prind.tech
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Role: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      />
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Status: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      >
        Invited
      </div>
    </div>
    <div
      className="row"
    >
      <Blueprint3.Button
        id="remove-member-button"
        intent="danger"
        onClick={[Function]}
        text="Remove From Project"
      />
    </div>
  </div>
</div>
`;

exports[`ContactTile - Should render with confirmed user 1`] = `
<div
  className="row member-confirmed"
  id="contact-tile"
  onClick={[Function]}
>
  <div
    className="col-md-3 col-sm-12"
  >
    <div
      className="text-center avatar-container"
    >
      <img
        alt="avatar"
        className="avatar img-circle img-thumbnail"
        src="images/default-avatar.png"
      />
    </div>
  </div>
  <div
    className="col-md-9 col-sm-12"
  >
    <div
      className="row"
    >
      <h4
        className="bp3-heading"
      >
        Testy McTesterson
      </h4>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Email: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      >
        testy.mctesterson@prind.tech
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Role: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      />
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Status: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      >
        Joined
      </div>
    </div>
    <div
      className="row"
    >
      <Blueprint3.Button
        id="remove-member-button"
        intent="danger"
        onClick={[Function]}
        text="Remove From Project"
      />
    </div>
  </div>
  <div
    className="view-accreditations"
  >
    View accreditations
  </div>
</div>
`;

exports[`ContactTile - Should render without first and last name 1`] = `
<div
  className="row member-not-confirmed"
  id="contact-tile"
  onClick={[Function]}
>
  <div
    className="col-md-3 col-sm-12"
  >
    <div
      className="text-center avatar-container"
    >
      <img
        alt="avatar"
        className="avatar img-circle img-thumbnail"
        src="images/default-avatar.png"
      />
    </div>
  </div>
  <div
    className="col-md-9 col-sm-12"
  >
    <div
      className="row"
    >
      <h4
        className="bp3-heading"
      >
        testy.mctesterson@prind.tech
      </h4>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Email: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      >
        testy.mctesterson@prind.tech
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Role: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      />
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Status: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      >
        Invited
      </div>
    </div>
    <div
      className="row"
    >
      <Blueprint3.Button
        id="remove-member-button"
        intent="danger"
        onClick={[Function]}
        text="Remove From Project"
      />
    </div>
  </div>
</div>
`;

exports[`ContactTile - Should render without username 1`] = `
<div
  className="row member-not-confirmed"
  id="contact-tile"
  onClick={[Function]}
>
  <div
    className="col-md-3 col-sm-12"
  >
    <div
      className="text-center avatar-container"
    >
      <img
        alt="avatar"
        className="avatar img-circle img-thumbnail"
        src="images/default-avatar.png"
      />
    </div>
  </div>
  <div
    className="col-md-9 col-sm-12"
  >
    <div
      className="row"
    >
      <h4
        className="bp3-heading"
      >
        testy.mctesterson@prind.tech
      </h4>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Email: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      >
        testy.mctesterson@prind.tech
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Role: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      />
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-2 col-md-4"
      >
        <b>
          Status: 
        </b>
      </div>
      <div
        className="col-lg-10 col-md-8"
      >
        Awaiting Sign Up
      </div>
    </div>
    <div
      className="row"
    >
      <Blueprint3.Button
        id="remove-member-button"
        intent="danger"
        onClick={[Function]}
        text="Remove From Project"
      />
    </div>
  </div>
</div>
`;
